# Simbir.Health

./: .env  Makefile  README.md  pyproject.toml
app/: logger.py  settings.py
app/api/: authentication.py
app/api/AccountMicroservice/: main.py  routers.py
app/api/AccountMicroservice/endpoint/: accounts.py  authentication.py  doctors.py
app/api/AccountMicroservice/services/: AccountsServices.py  AuthenticationServices.py  DoctorsServices.py
app/api/DocumentMicroservice/: main.py  routers.py
app/api/DocumentMicroservice/endpoint/: history.py
app/api/DocumentMicroservice/services/: HistoryServices.py
app/api/HospitalMicroservice/: main.py  routers.py
app/api/HospitalMicroservice/endpoint/: hospitals.py
app/api/HospitalMicroservice/services/: HospitalsServices.py
app/api/TimetableMicroservice/: main.py  routers.py
app/api/TimetableMicroservice/endpoint/: appointment.py  timetable.py
app/api/TimetableMicroservice/services/: TimetableServices.py
app/db/: db.py  repo.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6ea75df9eea3_auto_generated_migration.py
app/db/models/: __init__.py  models.py
app/db/repositories/: abstract_repo.py  appointment_repo.py  employee_roles_repo.py  hospitals_repo.py  roles_repo.py  rooms_repo.py  timetable_repo.py  users_repo.py
app/db/schemas/: user.py
docker/: Dockerfile  docker-compose.yml
